--- a/index.html
+++ b/index.html
@@ -1,175 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>English App – Beginner Lesson</title>
-
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #f5f6fa;
-        margin: 0;
-        padding: 0;
-    }
-
-    header {
-        background: #4A90E2;
-        color: white;
-        padding: 20px;
-        text-align: center;
-        font-size: 24px;
-        font-weight: bold;
-    }
-
-    .section {
-        padding: 20px;
-    }
-
-    h2 {
-        color: #333;
-        margin-bottom: 10px;
-        border-left: 4px solid #4A90E2;
-        padding-left: 10px;
-    }
-
-    .card {
-        background: white;
-        border-radius: 12px;
-        padding: 15px;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        margin-bottom: 12px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .audioBtn {
-        background: #4A90E2;
-        color: white;
-        border: none;
-        padding: 10px 14px;
-        border-radius: 8px;
-        font-size: 18px;
-        cursor: pointer;
-    }
-
-    .quiz-option {
-        background: white;
-        padding: 12px;
-        border-radius: 8px;
-        margin-top: 8px;
-        cursor: pointer;
-        border: 2px solid transparent;
-    }
-
-    .quiz-option:hover {
-        background: #e8f1ff;
-    }
-
-    .correct {
-        border-color: #2ecc71 !important;
-        background: #eaffea !important;
-    }
-
-    .wrong {
-        border-color: #e74c3c !important;
-        background: #ffeaea !important;
-    }
-</style>
-
-<script>
-    function playAudio(src) {
-        new Audio(src).play();
-    }
-
-    function checkAnswer(element, correct) {
-        if (correct) {
-            element.classList.add("correct");
-        } else {
-            element.classList.add("wrong");
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>English App - Lesson 1</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background: #f7f7f7;
         }
-    }
-</script>
 
+        .container {
+            max-width: 700px;
+            margin: auto;
+            padding: 20px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        .phrase-box {
+            margin-bottom: 25px;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            background: #fafafa;
+        }
+
+        button {
+            margin-top: 10px;
+            padding: 10px 18px;
+            font-size: 15px;
+            cursor: pointer;
+            border-radius: 8px;
+            border: none;
+        }
+
+        .female-btn {
+            background: #5a8dee;
+            color: white;
+        }
+
+        .male-btn {
+            background: #4caf50;
+            color: white;
+        }
+    </style>
 </head>
 <body>
 
-<header>English Lesson – Greetings</header>
+<div class="container">
+    <h1>Lesson 1 – Basic Phrases</h1>
 
-<div class="section">
-    <h2>Vocabulary</h2>
-
-    <div class="card">
-        <span>Hello – Olá</span>
-        <button class="audioBtn" onclick="playAudio('audio/hello.mp3')">🔊</button>
+    <div class="phrase-box">
+        <p><strong>“Hello, how are you?”</strong></p>
+        <button class="female-btn" onclick="speak('Hello, how are you?', 'female')">Voz Feminina</button>
+        <button class="male-btn" onclick="speak('Hello, how are you?', 'male')">Voz Masculina</button>
     </div>
 
-    <div class="card">
-        <span>Hi – Oi</span>
-        <button class="audioBtn" onclick="playAudio('audio/hi.mp3')">🔊</button>
+    <div class="phrase-box">
+        <p><strong>“Nice to meet you.”</strong></p>
+        <button class="female-btn" onclick="speak('Nice to meet you.', 'female')">Voz Feminina</button>
+        <button class="male-btn" onclick="speak('Nice to meet you.', 'male')">Voz Masculina</button>
     </div>
 
-    <div class="card">
-        <span>Good morning – Bom dia</span>
-        <button class="audioBtn" onclick="playAudio('audio/goodmorning.mp3')">🔊</button>
-    </div>
-
-    <div class="card">
-        <span>Good afternoon – Boa tarde</span>
-        <button class="audioBtn" onclick="playAudio('audio/goodafternoon.mp3')">🔊</button>
-    </div>
-
-    <div class="card">
-        <span>Good evening – Boa noite</span>
-        <button class="audioBtn" onclick="playAudio('audio/goodevening.mp3')">🔊</button>
-    </div>
-
-    <div class="card">
-        <span>Goodbye – Tchau</span>
-        <button class="audioBtn" onclick="playAudio('audio/goodbye.mp3')">🔊</button>
+    <div class="phrase-box">
+        <p><strong>“I am learning English.”</strong></p>
+        <button class="female-btn" onclick="speak('I am learning English.', 'female')">Voz Feminina</button>
+        <button class="male-btn" onclick="speak('I am learning English.', 'male')">Voz Masculina</button>
     </div>
 
 </div>
 
 
-<div class="section">
-    <h2>Useful Phrases</h2>
+<script>
+    let voices = [];
 
-    <div class="card">
-        <span>Hello, how are you? – Olá, como vai?</span>
-        <button class="audioBtn" onclick="playAudio('audio/howareyou.mp3')">🔊</button>
-    </div>
+    function loadVoices() {
+        voices = speechSynthesis.getVoices();
+    }
 
-    <div class="card">
-        <span>I'm fine, thank you – Estou bem, obrigado</span>
-        <button class="audioBtn" onclick="playAudio('audio/imfine.mp3')">🔊</button>
-    </div>
+    speechSynthesis.onvoiceschanged = loadVoices;
 
-    <div class="card">
-        <span>What's your name? – Qual seu nome?</span>
-        <button class="audioBtn" onclick="playAudio('audio/whatsyourname.mp3')">🔊</button>
-    </div>
-</div>
+    function speak(text, gender) {
+        let msg = new SpeechSynthesisUtterance(text);
 
+        let voice = null;
 
-<div class="section">
-    <h2>Mini Quiz</h2>
+        // ---- FILTRAR VOZES AMERICANAS ----
+        if (gender === "female") {
+            voice = voices.find(v =>
+                v.lang === "en-US" &&
+                (v.name.includes("Female") || v.name.includes("Samantha") || v.name.includes("Zira"))
+            );
+        } else {
+            voice = voices.find(v =>
+                v.lang === "en-US" &&
+                (v.name.includes("Male") || v.name.includes("John") || v.name.includes("Guy"))
+            );
+        }
 
-    <p><strong>1. “How are you?” significa:</strong></p>
+        if (!voice) {
+            // fallback caso não encontre
+            voice = voices.find(v => v.lang === "en-US");
+        }
 
-    <div class="quiz-option" onclick="checkAnswer(this, false)">A) Quem é você</div>
-    <div class="quiz-option" onclick="checkAnswer(this, true)">B) Como você está</div>
-    <div class="quiz-option" onclick="checkAnswer(this, false)">C) Onde você mora</div>
+        msg.voice = voice;
+        msg.rate = 1;   // velocidade normal
+        msg.pitch = 1;  // tom normal
 
-<br>
-
-    <p><strong>2. “Thank you” significa:</strong></p>
-
-    <div class="quiz-option" onclick="checkAnswer(this, false)">A) Olá</div>
-    <div class="quiz-option" onclick="checkAnswer(this, true)">B) Obrigado</div>
-    <div class="quiz-option" onclick="checkAnswer(this, false)">C) Tchau</div>
-</div>
+        speechSynthesis.speak(msg);
+    }
+</script>
 
 </body>
 </html>
