--- a/index.html
+++ b/index.html
@@ -6,185 +6,194 @@
 <title>English Course - Chapter 1</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    body {
-        font-family: 'Roboto', sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f9f9f9;
-        color: #333;
-    }
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f5f5f5;
+    color: #333;
+}
 
-    header {
-        background-color: #4CAF50;
-        color: white;
-        padding: 20px;
-        text-align: center;
-    }
+header {
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
 
-    nav {
-        display: flex;
-        justify-content: center;
-        margin-top: 10px;
-    }
+.chapter {
+    max-width: 900px;
+    margin: 30px auto;
+    padding: 10px;
+}
 
-    nav button {
-        margin: 0 10px;
-        padding: 10px 20px;
-        border: none;
-        background-color: #333;
-        color: white;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: 0.3s;
-    }
+.lesson-card {
+    background: white;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+}
 
-    nav button:hover {
-        background-color: #555;
-    }
+.lesson-card h3 {
+    margin-top: 0;
+    color: #34495e;
+}
 
-    .chapter {
-        max-width: 800px;
-        margin: 30px auto;
-        padding: 20px;
-    }
+.lesson-card p {
+    font-size: 18px;
+    line-height: 1.5;
+}
 
-    .lesson-card {
-        background: white;
-        padding: 20px;
-        margin-bottom: 20px;
-        border-radius: 10px;
-        box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
-    }
+.audio-buttons {
+    margin-top: 10px;
+}
 
-    .lesson-card h3 {
-        margin-top: 0;
-        color: #4CAF50;
-    }
+.audio-buttons button {
+    margin-right: 10px;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #2980b9;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
 
+.audio-buttons button:hover {
+    background-color: #3498db;
+}
+
+input[type="text"] {
+    padding: 8px;
+    width: 70%;
+    margin: 5px 0;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.check-btn {
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #27ae60;
+    color: white;
+    cursor: pointer;
+}
+
+.check-btn:hover {
+    background-color: #2ecc71;
+}
+
+.correct {
+    color: green;
+}
+
+.incorrect {
+    color: red;
+}
+
+@media (max-width: 600px) {
     .lesson-card p {
-        font-size: 18px;
-        line-height: 1.5;
+        font-size: 16px;
     }
-
-    .audio-buttons {
-        margin-top: 10px;
-    }
-
-    .audio-buttons button {
-        margin-right: 10px;
-        padding: 8px 15px;
-        border: none;
-        border-radius: 5px;
-        background-color: #4CAF50;
-        color: white;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-
-    .audio-buttons button:hover {
-        background-color: #45a049;
-    }
-
-    footer {
-        text-align: center;
-        padding: 20px;
-        background: #333;
-        color: white;
-        margin-top: 40px;
-    }
-
-    @media (max-width: 600px) {
-        .lesson-card p {
-            font-size: 16px;
-        }
-
-        nav {
-            flex-direction: column;
-        }
-
-        nav button {
-            margin: 5px 0;
-        }
-    }
+}
 </style>
 </head>
 <body>
 
 <header>
     <h1>English Course</h1>
-    <p>Chapter 1 - Basics</p>
+    <p>Chapter 1 - Your Information</p>
 </header>
 
-<nav>
-    <button onclick="prevChapter()">Previous Chapter</button>
-    <button onclick="nextChapter()">Next Chapter</button>
-</nav>
-
 <div class="chapter">
-    <div class="lesson-card">
-        <h3>Lesson 1: Greetings</h3>
-        <p>Hello! My name is John. Nice to meet you.</p>
-        <div class="audio-buttons">
-            <button onclick="speakText(this.previousElementSibling.innerText, 'male')">Ouvir (Masculino)</button>
-            <button onclick="speakText(this.previousElementSibling.innerText, 'female')">Ouvir (Feminino)</button>
-        </div>
-    </div>
 
-    <div class="lesson-card">
-        <h3>Lesson 2: Introductions</h3>
-        <p>How are you today? I hope you are fine.</p>
-        <div class="audio-buttons">
-            <button onclick="speakText(this.previousElementSibling.innerText, 'male')">Ouvir (Masculino)</button>
-            <button onclick="speakText(this.previousElementSibling.innerText, 'female')">Ouvir (Feminino)</button>
-        </div>
-    </div>
-
-    <div class="lesson-card">
-        <h3>Lesson 3: Daily Phrases</h3>
-        <p>Good morning! Have a nice day!</p>
-        <div class="audio-buttons">
-            <button onclick="speakText(this.previousElementSibling.innerText, 'male')">Ouvir (Masculino)</button>
-            <button onclick="speakText(this.previousElementSibling.innerText, 'female')">Ouvir (Feminino)</button>
-        </div>
+<!-- Tópico 1 -->
+<div class="lesson-card">
+    <h3>1. Your Information</h3>
+    <p>Look and answer: <strong>What is this?</strong></p>
+    <p>A) The Alphabet<br>B) English<br>C) Numbers</p>
+    <div class="audio-buttons">
+        <button onclick="speakText('What is this? A The Alphabet, B English, C Numbers')">Ouvir</button>
     </div>
 </div>
 
-<footer>
-    <p>&copy; 2025 English Course</p>
-</footer>
+<!-- Tópico 2 -->
+<div class="lesson-card">
+    <h3>2. Introduction</h3>
+    <p>Look and select the correct option:</p>
+    <p>A) I is David Johnson.<br>B) I am David Johnson.<br>C) I are David Johnson.</p>
+    <div class="audio-buttons">
+        <button onclick="speakText('I am David Johnson')">Ouvir</button>
+    </div>
+</div>
 
-<script>
-function speakText(text, gender) {
-    if (!('speechSynthesis' in window)) {
-        alert("Desculpe, seu navegador não suporta Speech Synthesis.");
-        return;
-    }
+<!-- Tópico 3 -->
+<div class="lesson-card">
+    <h3>3. Vocabulary</h3>
+    <p>Examples:</p>
+    <p>My address number is 74.<br>
+    Michael is American.<br>
+    She is my new friend, Wanessa.<br>
+    Mr. Marshall is a good teacher.<br>
+    My nationality? I'm Brazilian.<br>
+    I am a new student.<br>
+    My phone number is: (789) 456-9933.<br>
+    Lucas is a new student, too.<br>
+    I love my English teacher.<br>
+    I am 18 years old.</p>
+    <div class="audio-buttons">
+        <button onclick="speakText('My address number is 74. Michael is American. She is my new friend, Wanessa. Mr. Marshall is a good teacher. My nationality? I am Brazilian. I am a new student. My phone number is 789-456-9933. Lucas is a new student too. I love my English teacher. I am 18 years old.')">Ouvir</button>
+    </div>
+</div>
 
-    const utterance = new SpeechSynthesisUtterance(text);
-    const voices = speechSynthesis.getVoices();
-    
-    if (voices.length > 0) {
-        // Escolhe voz masculina ou feminina
-        let selectedVoice = voices.find(v => gender === 'male' ? v.name.includes('Male') : v.name.includes('Female'));
-        if (!selectedVoice) selectedVoice = voices[0]; // fallback
-        utterance.voice = selectedVoice;
-    }
+<!-- Tópico 4 -->
+<div class="lesson-card">
+    <h3>4. Speaking Practice</h3>
+    <p>Listen and repeat the words:</p>
+    <p>Address number, American, Friend, Good, Nationality, New, Phone number, Student, Teacher, Years old</p>
+    <div class="audio-buttons">
+        <button onclick="speakText('Address number, American, Friend, Good, Nationality, New, Phone number, Student, Teacher, Years old')">Ouvir</button>
+    </div>
+</div>
 
-    utterance.lang = 'en-US';
-    speechSynthesis.speak(utterance);
-}
+<!-- Tópico 5 -->
+<div class="lesson-card">
+    <h3>5. Numbers Bingo</h3>
+    <p>Click each number to see the corresponding word:</p>
+    <p>Example: One = 1, Two = 2 …</p>
+    <div class="audio-buttons">
+        <button onclick="speakText('One, Two, Three, Four, Five, Six, Seven, Eight, Nine')">Ouvir Cartela 1</button>
+        <button onclick="speakText('Twenty, Thirty, Forty … One Hundred')">Ouvir Cartela 2</button>
+    </div>
+</div>
 
-function prevChapter() {
-    alert("Próxima função: navegar para o capítulo anterior.");
-}
+<!-- Tópico 6 -->
+<div class="lesson-card">
+    <h3>6. Listen and Notice the Difference</h3>
+    <p>13: Thirteen – 30: Thirty<br>
+    14: Fourteen – 40: Forty<br>
+    15: Fifteen – 50: Fifty<br>
+    16: Sixteen – 60: Sixty<br>
+    17: Seventeen – 70: Seventy<br>
+    18: Eighteen – 80: Eighty<br>
+    19: Nineteen – 90: Ninety</p>
+    <p><strong>Don't confuse Teen with Ty</strong></p>
+    <div class="audio-buttons">
+        <button onclick="speakText('Thirteen, Thirty, Fourteen, Forty, Fifteen, Fifty, Sixteen, Sixty, Seventeen, Seventy, Eighteen, Eighty, Nineteen, Ninety')">Ouvir</button>
+    </div>
+</div>
 
-function nextChapter() {
-    alert("Próxima função: navegar para o próximo capítulo.");
-}
-
-// Atualiza a lista de vozes (necessário para alguns navegadores)
-speechSynthesis.onvoiceschanged = () => { speechSynthesis.getVoices(); };
-</script>
-
-</body>
-</html>
+<!-- Tópico 7 -->
+<div class="lesson-card">
+    <h3>7. Write the Numbers</h3>
+    <p>Type in the missing words:</p>
+    <input type="text" placeholder="1"><br>
+    <input type="text" placeholder="2"><br>
+    <input type="text" placeholder="3"><br>
+    <input type="text" placeholder="4"><br>
+    <input type="text" placeholder="5"><br>
+    <input type="text" placeholder="6"><br>
+    <input type="text" placeholder="7"><br>
+    <input type="text" placeholder=
