--- a/index.html
+++ b/index.html
@@ -3,197 +3,107 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>English Course - Chapter 1</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<title>Chapter 1 - Tópico 1</title>
 <style>
 body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
+    font-family: Arial, sans-serif;
     background: #f5f5f5;
+    margin: 0;
+    padding: 20px;
+}
+.card {
+    background: white;
+    max-width: 700px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+.card img {
+    width: 100%;
+    border-radius: 8px;
+}
+.card h2 {
     color: #333;
 }
-
-header {
-    background-color: #2c3e50;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
-
-.chapter {
-    max-width: 900px;
-    margin: 30px auto;
+.options button {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
     padding: 10px;
-}
-
-.lesson-card {
-    background: white;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
-}
-
-.lesson-card h3 {
-    margin-top: 0;
-    color: #34495e;
-}
-
-.lesson-card p {
-    font-size: 18px;
-    line-height: 1.5;
-}
-
-.audio-buttons {
-    margin-top: 10px;
-}
-
-.audio-buttons button {
-    margin-right: 10px;
-    padding: 8px 15px;
     border: none;
     border-radius: 5px;
-    background-color: #2980b9;
+    background: #2980b9;
     color: white;
     cursor: pointer;
     transition: 0.3s;
 }
-
-.audio-buttons button:hover {
-    background-color: #3498db;
+.options button:hover {
+    background: #3498db;
 }
-
-input[type="text"] {
-    padding: 8px;
-    width: 70%;
-    margin: 5px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+.correct {
+    background: #27ae60 !important;
 }
-
-.check-btn {
-    padding: 8px 15px;
+.incorrect {
+    background: #c0392b !important;
+}
+.audio-btn {
+    margin-top: 10px;
+    padding: 10px 15px;
+    background: #8e44ad;
+    color: white;
     border: none;
     border-radius: 5px;
-    background-color: #27ae60;
-    color: white;
     cursor: pointer;
 }
-
-.check-btn:hover {
-    background-color: #2ecc71;
-}
-
-.correct {
-    color: green;
-}
-
-.incorrect {
-    color: red;
-}
-
-@media (max-width: 600px) {
-    .lesson-card p {
-        font-size: 16px;
-    }
+.audio-btn:hover {
+    background: #9b59b6;
 }
 </style>
 </head>
 <body>
 
-<header>
-    <h1>English Course</h1>
-    <p>Chapter 1 - Your Information</p>
-</header>
-
-<div class="chapter">
-
-<!-- Tópico 1 -->
-<div class="lesson-card">
-    <h3>1. Your Information</h3>
-    <p>Look and answer: <strong>What is this?</strong></p>
-    <p>A) The Alphabet<br>B) English<br>C) Numbers</p>
-    <div class="audio-buttons">
-        <button onclick="speakText('What is this? A The Alphabet, B English, C Numbers')">Ouvir</button>
+<div class="card">
+    <h2>1. Your Information</h2>
+    <img src="https://images.unsplash.com/photo-1581092333180-8f6c1d1b97d7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8dGFibGV8fDB8fHx8MTY5MTE0MTA2NQ&ixlib=rb-4.0.3&q=80&w=400" alt="Form Example">
+    <p><strong>Look at this form. What kind of information is this?</strong></p>
+    <div class="options">
+        <button onclick="checkAnswer(this, 'B')">A) Names</button>
+        <button onclick="checkAnswer(this, 'B')">B) Numbers</button>
+        <button onclick="checkAnswer(this, 'B')">C) Colors</button>
     </div>
+    <button class="audio-btn" onclick="speakText('Look at this form. What kind of information is this? Option A: Names. Option B: Numbers. Option C: Colors.')">Ouvir</button>
 </div>
 
-<!-- Tópico 2 -->
-<div class="lesson-card">
-    <h3>2. Introduction</h3>
-    <p>Look and select the correct option:</p>
-    <p>A) I is David Johnson.<br>B) I am David Johnson.<br>C) I are David Johnson.</p>
-    <div class="audio-buttons">
-        <button onclick="speakText('I am David Johnson')">Ouvir</button>
-    </div>
-</div>
+<script>
+function speakText(text){
+    if('speechSynthesis' in window){
+        const utterance = new SpeechSynthesisUtterance(text);
+        utterance.lang = 'en-US';
+        speechSynthesis.speak(utterance);
+    } else {
+        alert('Seu navegador não suporta áudio.');
+    }
+}
 
-<!-- Tópico 3 -->
-<div class="lesson-card">
-    <h3>3. Vocabulary</h3>
-    <p>Examples:</p>
-    <p>My address number is 74.<br>
-    Michael is American.<br>
-    She is my new friend, Wanessa.<br>
-    Mr. Marshall is a good teacher.<br>
-    My nationality? I'm Brazilian.<br>
-    I am a new student.<br>
-    My phone number is: (789) 456-9933.<br>
-    Lucas is a new student, too.<br>
-    I love my English teacher.<br>
-    I am 18 years old.</p>
-    <div class="audio-buttons">
-        <button onclick="speakText('My address number is 74. Michael is American. She is my new friend, Wanessa. Mr. Marshall is a good teacher. My nationality? I am Brazilian. I am a new student. My phone number is 789-456-9933. Lucas is a new student too. I love my English teacher. I am 18 years old.')">Ouvir</button>
-    </div>
-</div>
+// Função para verificar resposta
+function checkAnswer(button, correct){
+    const allButtons = button.parentNode.querySelectorAll('button');
+    allButtons.forEach(btn => btn.disabled = true);
+    
+    if(button.textContent.startsWith(correct)){
+        button.classList.add('correct');
+    } else {
+        button.classList.add('incorrect');
+        // Marca a correta também
+        allButtons.forEach(btn => {
+            if(btn.textContent.startsWith(correct)){
+                btn.classList.add('correct');
+            }
+        });
+    }
+}
+</script>
 
-<!-- Tópico 4 -->
-<div class="lesson-card">
-    <h3>4. Speaking Practice</h3>
-    <p>Listen and repeat the words:</p>
-    <p>Address number, American, Friend, Good, Nationality, New, Phone number, Student, Teacher, Years old</p>
-    <div class="audio-buttons">
-        <button onclick="speakText('Address number, American, Friend, Good, Nationality, New, Phone number, Student, Teacher, Years old')">Ouvir</button>
-    </div>
-</div>
-
-<!-- Tópico 5 -->
-<div class="lesson-card">
-    <h3>5. Numbers Bingo</h3>
-    <p>Click each number to see the corresponding word:</p>
-    <p>Example: One = 1, Two = 2 …</p>
-    <div class="audio-buttons">
-        <button onclick="speakText('One, Two, Three, Four, Five, Six, Seven, Eight, Nine')">Ouvir Cartela 1</button>
-        <button onclick="speakText('Twenty, Thirty, Forty … One Hundred')">Ouvir Cartela 2</button>
-    </div>
-</div>
-
-<!-- Tópico 6 -->
-<div class="lesson-card">
-    <h3>6. Listen and Notice the Difference</h3>
-    <p>13: Thirteen – 30: Thirty<br>
-    14: Fourteen – 40: Forty<br>
-    15: Fifteen – 50: Fifty<br>
-    16: Sixteen – 60: Sixty<br>
-    17: Seventeen – 70: Seventy<br>
-    18: Eighteen – 80: Eighty<br>
-    19: Nineteen – 90: Ninety</p>
-    <p><strong>Don't confuse Teen with Ty</strong></p>
-    <div class="audio-buttons">
-        <button onclick="speakText('Thirteen, Thirty, Fourteen, Forty, Fifteen, Fifty, Sixteen, Sixty, Seventeen, Seventy, Eighteen, Eighty, Nineteen, Ninety')">Ouvir</button>
-    </div>
-</div>
-
-<!-- Tópico 7 -->
-<div class="lesson-card">
-    <h3>7. Write the Numbers</h3>
-    <p>Type in the missing words:</p>
-    <input type="text" placeholder="1"><br>
-    <input type="text" placeholder="2"><br>
-    <input type="text" placeholder="3"><br>
-    <input type="text" placeholder="4"><br>
-    <input type="text" placeholder="5"><br>
-    <input type="text" placeholder="6"><br>
-    <input type="text" placeholder="7"><br>
-    <input type="text" placeholder=
+</body>
+</html>
