--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chapter 1 - Tópico 1</title>
+<title>Curso de Inglês</title>
 <style>
 body {
     font-family: Arial, sans-serif;
@@ -11,7 +11,26 @@ body {
     margin: 0;
     padding: 20px;
 }
+h1 { text-align: center; color: #333; }
+.chapter-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 15px;
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+}
+.chapter-card {
+    background: #2980b9;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.chapter-card:hover { background: #3498db; }
 .card {
+    display: none;
     background: white;
     max-width: 700px;
     margin: 20px auto;
@@ -19,13 +38,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-.card img {
-    width: 100%;
-    border-radius: 8px;
-}
-.card h2 {
-    color: #333;
-}
+.card h2 { color: #333; }
 .options button {
     display: block;
     width: 100%;
@@ -38,69 +51,168 @@ body {
     cursor: pointer;
     transition: 0.3s;
 }
-.options button:hover {
-    background: #3498db;
-}
-.correct {
-    background: #27ae60 !important;
-}
-.incorrect {
-    background: #c0392b !important;
-}
-.audio-btn {
-    margin-top: 10px;
-    padding: 10px 15px;
-    background: #8e44ad;
-    color: white;
+.options button:hover { background: #3498db; }
+.nav-btn {
+    padding: 8px 15px;
+    margin: 5px;
     border: none;
     border-radius: 5px;
+    background: #8e44ad;
+    color: white;
     cursor: pointer;
 }
-.audio-btn:hover {
-    background: #9b59b6;
+.nav-btn:hover { background: #9b59b6; }
+input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+.check-btn {
+    margin-top: 10px;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #27ae60;
+    color: white;
+    cursor: pointer;
 }
 </style>
 </head>
 <body>
 
-<div class="card">
-    <h2>1. Your Information</h2>
-    <img src="https://images.unsplash.com/photo-1581092333180-8f6c1d1b97d7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8dGFibGV8fDB8fHx8MTY5MTE0MTA2NQ&ixlib=rb-4.0.3&q=80&w=400" alt="Form Example">
-    <p><strong>Look at this form. What kind of information is this?</strong></p>
-    <div class="options">
-        <button onclick="checkAnswer(this, 'B')">A) Names</button>
-        <button onclick="checkAnswer(this, 'B')">B) Numbers</button>
-        <button onclick="checkAnswer(this, 'B')">C) Colors</button>
+<h1>Curso de Inglês</h1>
+
+<!-- Tela inicial -->
+<div id="menu">
+    <div class="chapter-grid">
+        <div class="chapter-card" onclick="startChapter(1)">Capítulo 1</div>
+        <div class="chapter-card" onclick="startChapter(2)">Capítulo 2</div>
+        <div class="chapter-card" onclick="startChapter(3)">Capítulo 3</div>
+        <!-- Pode adicionar até Capítulo 24 -->
     </div>
-    <button class="audio-btn" onclick="speakText('Look at this form. What kind of information is this? Option A: Names. Option B: Numbers. Option C: Colors.')">Ouvir</button>
+</div>
+
+<!-- Conteúdo do capítulo -->
+<div id="chapterContent">
+    <div id="topicCard" class="card">
+        <h2 id="topicTitle"></h2>
+        <p id="topicText"></p>
+        <img id="topicImg" src="" alt="" style="width:100%;border-radius:8px;display:none;">
+        <div id="topicOptions" class="options"></div>
+        <input type="text" id="topicInput" placeholder="Digite aqui..." style="display:none;">
+        <button class="check-btn" id="checkBtn" onclick="checkInput()" style="display:none;">Check</button>
+        <div style="text-align:right;margin-top:10px;">
+            <button class="nav-btn" onclick="prevTopic()">Back</button>
+            <button class="nav-btn" onclick="nextTopic()">Next</button>
+            <button class="nav-btn" onclick="goMenu()">Menu</button>
+        </div>
+    </div>
 </div>
 
 <script>
-function speakText(text){
-    if('speechSynthesis' in window){
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = 'en-US';
-        speechSynthesis.speak(utterance);
+let currentChapter = 1;
+let currentTopic = 0;
+
+// Estrutura do Capítulo 1 (simplificada, pode expandir)
+const chapters = {
+    1: [
+        {title:"Números", text:"Selecione o número 3:", img:"https://via.placeholder.com/200x100?text=3", options:["1","3","5"], answer:"3", type:"options"},
+        {title:"Cores", text:"Clique na cor correta da bola:", img:"https://via.placeholder.com/150x150/ff0000/ffffff?text=Ball", options:["Red","Blue","Green"], answer:"Red", type:"options"},
+        {title:"Família", text:"Digite o nome desta pessoa:", img:"https://via.placeholder.com/200x150?text=Mother", answer:"mother", type:"input"},
+        {title:"Apresentação", text:"Escolha a frase correta para a imagem:", img:"https://via.placeholder.com/200x150?text=Girl", options:["I am Anna","I is Anna","I are Anna"], answer:"I am Anna", type:"options"},
+        {title:"Objetos", text:"Clique no objeto correto:", img:"https://via.placeholder.com/200x150?text=Book", options:["Book","Pen","Chair"], answer:"Book", type:"options"},
+        {title:"Animais", text:"Digite o nome do animal:", img:"https://via.placeholder.com/200x150?text=Dog", answer:"dog", type:"input"},
+        {title:"Idade", text:"Selecione a idade correta:", options:["5","7","3"], answer:"5", type:"options"},
+        {title:"Verbo To Be", text:"Escolha a frase correta:", options:["I am a student","I is a student","I are a student"], answer:"I am a student", type:"options"},
+        {title:"Cumprimentos", text:"Clique na saudação correta:", img:"https://via.placeholder.com/200x150?text=Hi", options:["Hi","Bye","Good morning"], answer:"Hi", type:"options"},
+        {title:"Revisão", text:"Digite o objeto correto:", img:"https://via.placeholder.com/200x150?text=Chair", answer:"chair", type:"input"},
+    ]
+};
+
+// Inicializa capítulo
+function startChapter(chapter){
+    currentChapter = chapter;
+    currentTopic = 0;
+    document.getElementById("menu").style.display = "none";
+    document.getElementById("chapterContent").style.display = "block";
+    showTopic();
+}
+
+// Volta ao menu
+function goMenu(){
+    document.getElementById("chapterContent").style.display = "none";
+    document.getElementById("menu").style.display = "block";
+}
+
+// Mostrar tópico
+function showTopic(){
+    const topic = chapters[currentChapter][currentTopic];
+    document.getElementById("topicTitle").textContent = topic.title;
+    document.getElementById("topicText").textContent = topic.text;
+    
+    if(topic.img){
+        document.getElementById("topicImg").src = topic.img;
+        document.getElementById("topicImg").style.display = "block";
     } else {
-        alert('Seu navegador não suporta áudio.');
+        document.getElementById("topicImg").style.display = "none";
+    }
+
+    if(topic.type === "options"){
+        document.getElementById("topicOptions").innerHTML = "";
+        topic.options.forEach(opt=>{
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = ()=>checkAnswer(btn,topic.answer);
+            document.getElementById("topicOptions").appendChild(btn);
+        });
+        document.getElementById("topicOptions").style.display = "block";
+        document.getElementById("topicInput").style.display = "none";
+        document.getElementById("checkBtn").style.display = "none";
+    } else if(topic.type === "input"){
+        document.getElementById("topicInput").value = "";
+        document.getElementById("topicInput").style.display = "block";
+        document.getElementById("checkBtn").style.display = "inline-block";
+        document.getElementById("topicOptions").style.display = "none";
     }
 }
 
-// Função para verificar resposta
+// Navegação
+function nextTopic(){
+    if(currentTopic < chapters[currentChapter].length-1){
+        currentTopic++;
+        showTopic();
+    }
+}
+function prevTopic(){
+    if(currentTopic > 0){
+        currentTopic--;
+        showTopic();
+    }
+}
+
+// Verificação
 function checkAnswer(button, correct){
     const allButtons = button.parentNode.querySelectorAll('button');
-    allButtons.forEach(btn => btn.disabled = true);
-    
-    if(button.textContent.startsWith(correct)){
+    allButtons.forEach(btn=>btn.disabled=true);
+    if(button.textContent === correct){
         button.classList.add('correct');
     } else {
         button.classList.add('incorrect');
-        // Marca a correta também
-        allButtons.forEach(btn => {
-            if(btn.textContent.startsWith(correct)){
-                btn.classList.add('correct');
-            }
+        allButtons.forEach(btn=>{
+            if(btn.textContent === correct) btn.classList.add('correct');
         });
+    }
+}
+
+function checkInput(){
+    const topic = chapters[currentChapter][currentTopic];
+    const input = document.getElementById("topicInput");
+    if(input.value.trim().toLowerCase() === topic.answer.toLowerCase()){
+        input.style.border = "2px solid green";
+    } else {
+        input.style.border = "2px solid red";
     }
 }
 </script>
