--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         color: #333; 
         border-bottom: 1px solid #e0e0e0; 
         padding-top: 10px; 
+        /* Mantém a linha próxima ao texto "Beginner" */
         padding-bottom: 4px; 
-        margin-bottom: 30px; 
+        /* AUMENTADO: Afasta a linha (e o Beginner) dos cards */
+        margin-bottom: 50px; 
         font-size: 2.2em; 
         font-weight: 500; 
     }
