--- a/index.html
+++ b/index.html
@@ -388,21 +388,21 @@
             correctAnswer: 'B', 
             chapter: 1
         },
-        // Q3: NOVA TELA DE EXEMPLOS (10 SENTENÇAS) - COM DESTAQUE AZUL REVISADO
+        // Q3: NOVA TELA DE EXEMPLOS (10 SENTENÇAS) - COM DESTAQUE AZUL REVISADO FINAL
         {
             id: 3,
             question: "PRACTICE SENTENCES (10 Examples):", 
             options: {
-                "1.": `My <span style="color: #007bff;">address number</span> is 34.`, // 'address number' em azul
-                "2.": `I am a <span style="color: #007bff;">new student</span>.`, // 'student' em azul
-                "3.": `Sofia is my new <span style="color: #007bff;">friend</span>, Alexia.`, // 'friend' em azul
-                "4.": `Mr. David is a <span style="color: #007bff;">great</span> teacher.`, // 'great' em azul
-                "5.": `My <span style="color: #007bff;">phone number</span> is: (987) 654-1234.`, // 'phone number' em azul
-                "6.": `I am <span style="color: #007bff;">Brazilian</span>.`, // 'Brazilian' em azul
-                "7.": `I love my English teacher.`, // Nenhuma palavra em azul
-                "8.": `Lucas is a new <span style="color: #007bff;">student</span>, too.`, // 'student' em azul
-                "9.": `I am 18 <span style="color: #007bff;">years old</span>.`, // 'years old' em azul
-                "10.": `My nationality? I'm <span style="color: #007bff;">American</span>.` // 'American' em azul
+                "1.": `My <span style="color: #007bff;">address number</span> is 34.`, // address number em azul
+                "2.": `I am a <span style="color: #007bff;">student</span>.`, // student em azul
+                "3.": `He is my new <span style="color: #007bff;">friend</span>, David.`, // friend em azul (nome masculino adicionado)
+                "4.": `Mr. David is a <span style="color: #007bff;">great</span> teacher.`, // great em azul
+                "5.": `My <span style="color: #007bff;">phone number</span> is: (987) 654-1234.`, // phone number em azul
+                "6.": `Sofia is <span style="color: #007bff;">American</span>.`, // American em azul
+                "7.": `I love my English <span style="color: #007bff;">teacher</span>.`, // teacher em azul
+                "8.": `Lucas is a <span style="color: #007bff;">new</span> student, too.`, // new em azul (student sem azul)
+                "9.": `I am 18 <span style="color: #007bff;">years old</span>.`, // years old em azul
+                "10.": `My nationality? I'm <span style="color: #007bff;">Brazilian</span>.` // Brazilian em azul
             },
             correctAnswer: 'INFO', 
             chapter: 1
